<resources>
    <string name="app_name">Hotel Application</string>
    <string name="main">Select a Hotel</string>
    <string name="hotel">Select a Room</string>
    <string name="room">Welcome to the Room</string>
    <string name="url_swan_reservation">https://convoyant.com/resnexus/reserve/?ID=140</string>
    <string name="url_destinations_reservation">https://convoyant.com/resnexus/reserve/?ID=310</string>

    <string name="reserve">Reserve a Room</string>
    <string name="welcome">Welcome to </string>
    <string name="overview">Overview</string>
    <string name="entertainment_system">Entertainment System</string>
    <string name="lights">Lights</string>
    <string name="lighting">As you enter the room the lighting was set on a “Welcome” scene. All of the lighting is pre-programmed to provide four different ambiances.
        By each door and next to the beds you will find the control panels. Each button is labeled for easy use.</string>
    <string name="food">Food</string>

    <string name="overviewDest">Thanks for staying at Destinations Inn. Here are some things you should know.\n\n</string>
    <string name="overviewBlk">Thanks for staying at The Black Swan Inn. Here are some things you should know.\n\n</string>
    <string name="wifi_dest"><b>Wifi</b>\nInternet Connection: <i>Destinations Inn-Guest</i>\nPassword: <i>guest8444</i>\n\n</string>
    <string name="wifi_black"><b>Wifi</b>\nInternet Connection: <i>Black Swan Inn</i>\nPassword: <i>blksw4n1nn</i>\n\n</string>
    <string name="entertainment_warning"><b>When turning on system to watch TV or DVD, please allow 30 seconds for everything to turn on.</b>\n\n
    To switch from TV to DVD, push the "HOME" button and select from the touch screen desired activity. Allow five seconds for everything to switch over.</string>
    <string name="entertainment_tv">Watch TV</string>
    <string name="entertainment_dvd">Watch DVD</string>
    <string name="entertainment_off">Turn everything off</string>
    <string name="entertainment_trouble">Trouble Shooting</string>
    <string name="entertainment">This is a complicated system and you are going to need my help to figure it out</string>
    <string name="entertainmentTwo">This is an easier system to work, and you may be able to do it alone</string>
    <string name="steps_tv">1) If screen is not already down, lower with screen remote.\n
        2) Slide finder across touch screen to turn on.\n
        3) Touch "HOME" on the touch screen and select "WATCH TV. Allow a few seconds for everything to turn on.\n
        4) If everything did not turn on, press the "MENU" button (three lines) and select "HELP" and follow the directions. (Cable Box is on when light is green.)\n
        5) Use the "Guide" button to bring up menu and press "OK" to select a channel. Or you can type in a specific channel you want to watch. Press the "DEVICES" button and select "CABLEONE STB" then selcet "123" and type in desired channel. To exit, press either "EXIT" or "HOME"</string>
    <string name="steps_dvd">1)Touch "HOME" on the touch screen and select "WATCH DVD." Allow a few seconds for everything to turn on.\n
        2) Insert disc into DVD player.\n
        3) Remote will control the DVD player.\n
        4) If everything did not turn on, press the "MENU" button (three lines) and select "HELP" and follow the directions.</string>
    <string name="steps_off">Point the remote toward the TV, press and release the "POWER" button.</string>
    <string name="steps_trouble">For any other problems, press the "HELP" button on remote and follow instructions on touch screen.\n
        Amplifer should read the correct inputs and should change automatically with remote, if not then manually adjust to the correct input.\n
        To watch TV: "TV"\nTowatch DVD: "VIDEO"\n\nOr dial "72" for office, after hours call 208-221-3744.</string>
    <string name="near">Near Me</string>
    <string name="title_activity_nearme">Map</string>
    <string name="remote_pic">Picture of the Remote</string>

    <string name="black_swan">Black Swan Inn\nPocatello, ID</string>
    <string name="alaska">Alaska</string>
    <string name="arabia">Arabia</string>
    <string name="athens">Athens</string>
    <string name="congo">Congo</string>
    <string name="egypt">Egypt</string>
    <string name="england">England</string>
    <string name="hawaii">Hawaii</string>
    <string name="morocco">Morocco</string>
    <string name="new_york">New York</string>
    <string name="paris">Paris</string>
    <string name="rio">Rio de Janeiro</string>
    <string name="rome">Rome</string>
    <string name="thailand">Thailand</string>
    <string name="venice">Venice</string>

    <string name="destinations">Destinations Inn\nIdaho Falls, ID</string>
    <string name="arabian">Arabian Nights</string>
    <string name="atlantis">Atlantis Under the Sea</string>
    <string name="garden">Black Swan Garden</string>
    <string name="cave">Cave</string>
    <string name="egyptian">Egyptian</string>
    <string name="enchanted">Enchanted Forest</string>
    <string name="jungle">Jungle Falls</string>
    <string name="mayan">Mayan Rain Forest</string>
    <string name="pirates">Pirates</string>
    <string name="cabin">Rocky Mountain Cabin</string>
    <string name="rji">Romeo and Juliet I</string>
    <string name="rjii">Romeo and Juliet II</string>
    <string name="sea_cave">Sea Cave</string>
    <string name="tropical">Tropical Paradise</string>
    <string name="wild_west">Wild West</string>

    <string name="overview_destinations">Relax\n

Thank you for staying with us at the Destinations Inn.\n

Please let our staff know if there is anything we can do to make your stay more enjoyable.\n\n

❦ O F F I C E H O U R S ❦\n\n

Monday-Saturday .................... 8:00am - 10:00pm\n

Sunday..................................Open for check in only\n

Check out is 11am\n

Our staff is available to you 24 hours a day.\n

Dial “72" for office staff – During office hours\n

After hours, first try dialing "72," if no answer then please call (208) 221-3744.\n\n

❦ W I - F I ❦\n\n

Internet Connection: Destinations Inn-Guest\n

Password: guest8444\n

In order to connect to the internet you must first connect your device to the internet connection:

Destinations Inn-Guest. Once device is connected open up any internet browser (Explorers, Firefox, etc)

and type password (guest8444) into password box when prompted.\n\n

❦ P O L I C I E S ❦\n\n

Please no visitors past 9:00pm.

Please be considerate of other guests during your stay by keeping the

volume on your television low, especially past 10:00pm.

Pets are not allowed in rooms.

Please no candles.

All suites are non-smoking. Violators will be charged a $300 fee.



❦ O T H E R I N F O R M A T I O N ❦



LIGHTING

As you enter the room the lighting was set on a “Welcome” scene. All of the

lighting is pre-programmed to provide four different ambiances. By each door and next

to the beds you will find the control panels. Each button is labeled for easy use.



WATER FEATURES

The water features in Hawaii, Pairs, and Rome turn on when the lights are on the

“Welcome” setting. Each of these features will turn off when the lights are “All on” or

“Off.”

The water features in Morocco and Congo have separate switches. The switch in

Morocco is to the left of the hanging tapestry. The switch in the Congo is on the wall

below the water feature.

SAUNA

Arabia and Egypt: In order for the sauna heater to work turn the knob on but must

be kept within the black area. The other numbers are for convenience to have the heater

turn on at a later pre-determined time.

For example if you want the heater to turn on in two hours set the knob on two and it will

begin to count down and once it reached the black are the heater will automatically turn

on.





PHONE CALLS

Local calls may be made by dialing 9 for an outside line. If you receive a

busy signal, wait a few minutes and try again. Long distance calls may only be made

with a phone card.







3

FIREPLACE

Alaska, Morocco, Athens The fireplace is controlled by the thermostat to the right

of the fireplace. During summer months, the fireplace may be turned off.







AIR CONDITIONING AND HEATING UNIT

The temperature of your suite may be regulated by adjusting the air unit. It is also

helpful to keep the air unit on fan for “white noise.”

DESTINAIONS INN FACT

Each room features “Danze” plumbing fixtures, which are found throughout Europe

in some of the elegant mansions.







AVAILABLE IN OFFICE

Ice- in Lobby

Blow Dryer

Corkscrew

Wine glasses

Extra bath towels

Iron/ironing board

Movies available for check-out

Soda and candy available for purchase</string>

</resources>
