<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/nearMe"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/near_me"
            android:scaleType="centerCrop"
            android:onClick="openMaps" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/alaska"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/alaska"
            android:scaleType="centerCrop"
            android:onClick="openAlaska"
            android:contentDescription="@string/alaska"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/arabia"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/arabia"
            android:scaleType="centerCrop"
            android:onClick="openArabia"
            android:contentDescription="@string/arabia"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />


        <ImageView
            android:id="@+id/athens"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/athens"
            android:scaleType="centerCrop"
            android:onClick="openAthens"
            android:contentDescription="@string/athens"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/congo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/congo"
            android:scaleType="centerCrop"
            android:onClick="openCongo"
            android:contentDescription="@string/congo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/egypt"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/egypt"
            android:scaleType="centerCrop"
            android:onClick="openEgypt"
            android:contentDescription="@string/egypt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/england"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/england"
            android:scaleType="centerCrop"
            android:onClick="openEngland"
            android:contentDescription="@string/england"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/hawaii"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/hawaii"
            android:scaleType="centerCrop"
            android:onClick="openHawaii"
            android:contentDescription="@string/hawaii" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/morocco"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/morocco"
            android:scaleType="centerCrop"
            android:onClick="openMorocco"
            android:contentDescription="@string/morocco"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/newYork"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/new_york"
            android:scaleType="centerCrop"
            android:onClick="openNewYork"
            android:contentDescription="@string/new_york"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/paris"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/paris"
            android:scaleType="centerCrop"
            android:onClick="openParis"
            android:contentDescription="@string/paris"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/rio"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/rio"
            android:scaleType="centerCrop"
            android:onClick="openRio"
            android:contentDescription="@string/rio"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/rome"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/rome"
            android:scaleType="centerCrop"
            android:onClick="openRome"
            android:contentDescription="@string/rome"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/thailand"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/thailand"
            android:scaleType="centerCrop"
            android:onClick="openThailand"
            android:contentDescription="@string/thailand"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#442222" />

        <ImageView
            android:id="@+id/venice"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/venice"
            android:scaleType="centerCrop"
            android:onClick="openVenice"
            android:contentDescription="@string/venice"/>

</LinearLayout>
    </ScrollView>